# rust-workshop-2024

workshop-1/: Cargo.toml  README.md
workshop-1/src/: main.rs
workshop-2/: Cargo.toml  README.md
workshop-2/src/: server.rs
workshop-3/: Cargo.toml  README.md
